# audiofilesplit

./: .gitignore  CLAUDE.md  README.md  build.py  gui.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: changelog-updater.md  readme-generator.md
.claude/hooks/: permission-request-notification.ps1  stop-notification.ps1
.claude/rules/: coding-guidelines.md  database.md  python-coding.md  response-style.md  testing.md
app/: __init__.py  main_window.py  progress_window.py
docs/: CHANGELOG.md  LICENSE  README.md
scripts/: project_structure.txt
service/: audio_splitter.py  ffmpeg_runner.py
tests/: test_audio_splitter.py  test_main_window.py
utils/: config.ini  config_manager.py  log_rotation.py
