[project]
name = "audiofilesplit"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pyright>=1.1.409",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["app", "service", "utils", "tests"]
exclude = ["scripts"]
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true